--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.136",
     "bn-ng-idle": "^1.0.1",
+    "chart.js": "^2.9.3",
     "core-js": "^2.6.9",
     "file-saver": "^2.0.2",
     "fs": "0.0.1-security",
