--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "^7.2.15",
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "^7.2.15",
+    "@ngmodule/material-carousel": "^0.6.0",
+    "@types/googlemaps": "^3.39.3",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.136",
     "bn-ng-idle": "^1.0.1",
